--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
-rabbit.interval=10
+rabbit.interval=5
+jdbc.url=jdbc:postgresql://localhost:5432/schema
+jdbc.driver=org.postgresql.Driver
+jdbc.userName=postgres
+jdbc.userPassword=password
