--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:postgresql://localhost:5432/memStore
+jdbc.url=jdbc:postgresql://localhost:5432/schema
 jdbc.driver=org.postgresql.Driver
 jdbc.userName=postgres
 jdbc.userPassword=password
